# RosenholzC

./: rosenholz_requirements.md
design/: REQUIREMENTS.md  pm_rosenholz_final_consistent.html  project_layout.txt  rosenholz_requirements_v3_corrected.md  v6_menus_reference.md
design/archive/: ClassDiagram.html  documentation.txt
implementation/: .gitignore  CMakeLists.txt  README.md  main.cpp  settings.json  shell.nix
implementation/scripts/: gen_schema_files.py
implementation/sql/: akt.sql  core.sql  documents.sql  dok.sql  f16.sql  f18.sql  f22.sql  f24.sql  f77.sql  f77s.sql  f77task.sql  f99.sql  notes.sql  projects.sql  reporting.sql  tracking.sql  users.sql  workflow.sql
implementation/src/app/: AppController.cpp  AppController.h
implementation/src/auth/: Auth.cpp  Auth.h
implementation/src/cli/: ChangeRequestMenu.cpp  DocumentMenu.cpp  F18Menu.cpp  IncidentMenu.cpp  PersonMenu.cpp  ProjectMenu.cpp  ReportingMenu.cpp  RiskMenu.cpp  TaskMenu.cpp  TeamMenu.cpp  Utilities.cpp  WorkflowMenu.cpp  cli_comm.cpp  cli_common.h  cli_de.cpp  cli_dok.cpp  cli_f16.cpp  cli_f18.cpp  cli_f22.cpp  cli_f24.cpp  cli_f77.cpp  cli_f99.cpp  cli_nav.cpp  cli_per.cpp  cli_registry.cpp  cli_registry.h  cli_sys.cpp  cli_tasks.cpp  cli_utils.cpp  main_cli.cpp
implementation/src/core/: BackupManager.cpp  BackupManager.h  Config.cpp  Config.h  Database.cpp  Database.h  FileOps.cpp  FileOps.h  Logger.cpp  Logger.h  Migration.cpp  Migration.h  OperationResult.h  RegNumber.cpp  RegNumber.h  Repository.h  Stats.cpp  Stats.h
implementation/src/mfs/: MFSWriter.cpp  MFSWriter.h
implementation/src/model/: Document.cpp  Document.h  Guard.h  HistoryLog.cpp  HistoryLog.h  IncidentF18.cpp  IncidentF18.h  Milestone.cpp  Milestone.h  NavigationContext.cpp  NavigationContext.h  Note.cpp  Note.h  Person.cpp  Person.h  ProjectF16.cpp  ProjectF16.h  ReportingModels.cpp  ReportingModels.h  Risk.cpp  Risk.h  StatusColor.cpp  StatusColor.h  TaskF22.cpp  TaskF22.h  Team.cpp  Team.h  Trackable.cpp  Trackable.h  TreeBuilder.cpp  TreeBuilder.h  Utils.cpp  Utils.h  WatchPoller.cpp  WatchPoller.h
implementation/src/model/akt/: ArchiveStore.cpp  Folder.cpp  Folder.h  FolderObject.cpp  FolderObject.h  FolderRevision.cpp  FolderRevision.h
implementation/src/model/dok/: Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h
implementation/src/model/f16/: F16.cpp  F16.h  ProjectF16.cpp  ProjectF16.h
implementation/src/model/f18/: Communication.cpp  Communication.h  F18Operation.cpp  F18Operation.h  F18OperationStep.cpp  F18OperationStep.h  F18Workflow.cpp  F18Workflow.h  F18WorkflowStep.cpp  F18WorkflowStep.h
implementation/src/model/f22/: F22.cpp  F22.h  TaskF22.cpp  TaskF22.h
implementation/src/model/f24/: F24.cpp  F24.h
implementation/src/model/person/: Person.cpp  Person.h
implementation/src/model/team/: Team.cpp  Team.h
implementation/src/repository/: ArchiveStore.cpp  ArchiveStore.h  DocumentRevision.cpp  DocumentRevision.h
implementation/src/workflow/: F77Engine.h  F77Task.cpp  F77Task.h  F77Workflow.cpp  F77Workflow.h  WorkflowEngine.cpp  WorkflowEngine.h
implementation/tests/: TestFixtures.h  TestFramework.h  main_test.cpp  test_core.cpp  test_model.cpp  test_workflow.cpp
implementation/tests/unit/: test_helpers.h
implementation/tests/unit/akte/: test_akte.cpp
implementation/tests/unit/core/: test_core.cpp
implementation/tests/unit/f16/: test_f16.cpp
implementation/tests/unit/f18/: test_f18.cpp
implementation/tests/unit/f18s/: test_f18s.cpp
implementation/tests/unit/f22/: test_f22.cpp
implementation/tests/unit/f24/: test_f24.cpp
implementation/tests/unit/f77/: test_f77.cpp
implementation/tests/unit/f99/: test_f99.cpp
implementation/tests/unit/legacy/: akte_old_test.cpp  core_old_test.cpp  f16_old_test.cpp  f18_old_test.cpp  f22_old_test.cpp  lifecycle_old_test.cpp  person_old_test.cpp
implementation/tests/unit/per/: test_per.cpp
implementation/tests/unit/regnumber/: test_regnumber.cpp
implementation/tests/unit/wildcards/: test_wildcard.cpp
